fixed issue with parallax image jumping on mobile - had to add null transform hack to use GPU not CPU - actually a hack to update parallax on content length change

--- a/_sass/_parallax.scss
+++ b/_sass/_parallax.scss
@@ -16,6 +16,7 @@
 
 	&:not(.solid) {
 		box-shadow: inset 0 0 50px rgba(100,100,100,0.5);
+	   -webkit-transform: translate3d(0px, 0px, 0px);
 		// max-height: 60vw;
 	}
 }
